Replaced pm2 with systemd

--- a/overlay/etc/systemd/system/etherpad.service
+++ b/overlay/etc/systemd/system/etherpad.service
@@ -7,7 +7,8 @@ Type=simple
 WorkingDirectory=/opt/etherpad-lite
 User=node
 Group=node  
-ExecStart=/usr/local/bin/npm start --production /opt/etherpad-lite
+Environment=NODE_ENV=production
+ExecStart=cd /opt/etherpad-lite;/opt/etherpad-lite/bin/run.sh
 ExecStop=/bin/kill -TERM $MAINPID  
 ExecReload=/bin/kill -HUP $MAINPID
 Restart=on-failure
