Fairly significant refactoring, leverage new common bashlib & address edge case failure on firstboot (rare race condition where mysql user pw isn't set).

--- a/overlay/etc/systemd/system/etherpad.service
+++ b/overlay/etc/systemd/system/etherpad.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Etherpad Lite
-After=network.target
+After=network.target mariadb.service
+Wants=mariadb.service
 
 [Service]
 Type=simple 
